<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="at.tugraz.xp10.fragments.ListSettingFragment"
    android:background="@color/colorWhite">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/list_setting_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:text="@string/title" />

            <EditText
                android:id="@+id/list_setting_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:text="@string/description" />

            <!--<com.pchmn.materialchips.ChipsInput-->
            <!---->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--app:hint="Enter a name" />-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="List users"
                android:visibility="visible"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>

            <LinearLayout
                android:id="@+id/list_setting_chips_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/list_setting_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/list_setting_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save" />
        </LinearLayout>



    </RelativeLayout>

</FrameLayout>
