<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ManageFriendsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/friends"
                android:visibility="visible"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <LinearLayout
                android:id="@+id/chipview_friends"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="5dp"
                android:background="?android:attr/listDivider"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>

            <EditText
                android:id="@+id/textedit_friend_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/friend_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"/>
            <Button
                android:id="@+id/button_add_friend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addFriend"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="5dp"
                android:background="?android:attr/listDivider"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/friends_pending"
                android:visibility="visible"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <LinearLayout
                android:id="@+id/chipview_pending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</FrameLayout>